# _pydantic

./: .env  Pydantic_v2.py  README.md  code.ipynb  pyproject.toml  ya_pydantic.py
